fix about-us page layout on mobile

--- a/landing/_sass/styles/_about.scss
+++ b/landing/_sass/styles/_about.scss
@@ -15,6 +15,10 @@
 
 .person-entry {
   width: 48%;
+
+  @include media-query($tablet) {
+    width: 100%;
+  }
 }
 
 .team-image {
